Fixed gap between kpi-table and data-table

--- a/PLSmartPivot.less
+++ b/PLSmartPivot.less
@@ -215,6 +215,6 @@
 	height: 100%;
 	z-index: 90;
 	position: absolute;
-	margin-left: 253px;
+	margin-left: @KpiTableWidth + 13px;
 	-ms-overflow-style: none;
 }
